@@ -299,9 +299,9 @@ void	update_triggers(int itemid)
 		{
 			zabbix_log( LOG_LEVEL_WARNING, "Expression [%s] cannot be evaluated [%s]",trigger.expression, error);
 			zabbix_syslog("Expression [%s] cannot be evaluated [%s]",trigger.expression, error);
-
-			now = time(NULL);
-			DBupdate_trigger_value(&trigger, exp_value, now, error);
+/* We shouldn't update triggervalue if expressions failed */
+/*			now = time(NULL);
+			DBupdate_trigger_value(&trigger, exp_value, now, error);*/
 			continue;
 		}
 
